[package]
name = "buoy_scraper"
version = "0.1.0"
authors = ["Cornish, Samuel <sam.cornish@karlstorz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
scraper = "0.12.0"
image = "0.23.14"
